# OSPREY_ACCEL

./: createFloatArray.py  readme.md
Composer-Examples/: CMakeLists.txt  launch_and_measure.py
Composer-Examples/src/dt/: DTTest.cc  DecisionTree.cc  DecisionTree.h
Composer-Examples/src/fpunew/: fpnew_tester.cc
Composer-Examples/src/gemm/: README.md  big_gemm_cpu.cc  big_gemm_gpu.cu  big_gemm_test.cc  gemm_cpu.h  gemm_dispatch_test.cc  gemm_test.cc
Composer-Examples/src/sha3/: energycalc_tb.cc  sha3_test.cc
Composer-Examples/src/through/: throughput_test.cc
Composer-Examples/src/unit/: allocate_test.cc  alu_test.cc  clear_mem.c  dma_test.cc  lfsrtest.cc  scraper.c  vector.cc
Composer-Examples/src/util/: util.h
Composer-Hardware/: CHANGELOG_3_14_2023  Makefile  build.sbt
Composer-Hardware/.fpnew_cache/: FPNewBlackbox_tyfloat_l1_1s_1tw_4ops.v  FPNewBlackbox_tyfloat_l2_1s_1tw_2ops.v
Composer-Hardware/composer/src/main/scala/composer/MemoryStreams/: Readers.scala
Composer-Hardware/doc/: ForcefieldEnergy.java
Composer-Hardware/fpnew-wrapper/: .gitmodules  Makefile  README.md  build.sbt  build.sc
Composer-Hardware/fpnew-wrapper/src/main/resources/fpnew_scripts/: FPNewBlackbox.sv  gen.py
Composer-Hardware/fpnew-wrapper/src/main/scala/fpnewWrapper/: FPNewBlackbox.scala  FPNewMain.scala  common.scala  float.scala
Composer-Hardware/fpnew-wrapper/src/test/c/: golden.c
Composer-Hardware/fpnew-wrapper/src/test/scala/prose/fpnew/: FPNewTest.scala
Composer-Hardware/project/: plugins.sbt
Composer-Hardware/scripts/: composerToTL.patch  setup.sh
Composer-Hardware/src/main/scala/design/: TestDriver.scala
Composer-Hardware/src/main/scala/design/DT/: DecisionTreeConfig.scala  DecisionTreeCore.scala  DecisionTreeDispatcher.scala
Composer-Hardware/src/main/scala/design/Gemm/: Gemm.scala  GemmDispatcher.scala  GemmDriver.scala  GemmFloat.scala
Composer-Hardware/src/main/scala/design/energyCalc/: EnergyCal.scala  EnergyCalcTop.scala  HalfNonBonded.scala  NonBonded.scala  Solvated.scala
Composer-Hardware/src/main/scala/design/fpu/: FPUTester.scala
Composer-Hardware/src/main/scala/design/sha3/: Sha3.scala
Composer-Hardware/src/main/scala/design/unit/: Examples.scala  Throughput.scala
Composer-Hardware/vsim/generated-src/: ComposerTop.anno.json  FPNewBlackbox_tyfloat_l1_1s_1tw_2ops.v  FPNewBlackbox_tyfloat_l3_1s_1tw_1ops.v  composer.EnergyCalcConfig.anno.json  composer.EnergyCalcConfig.fir  composer.v  composer_allocator_declaration.h
Composer-Runtime/: .gitmodules  CHANGELIST_2_14_2023  CMakeLists.txt  README.md
Composer-Runtime/include/: cmd_server.h  data_server.h  ddr_macros.h  fpga_utils.h  mmio.h  response_poller.h  util.h  verilator.h
Composer-Runtime/src/: cmd_server.cc  data_server.cc  dma_sim_test.cc  fpga_main.cc  fpga_utils.c  mmio.cc  response_poller.cc  verilator.cc  xsim_sanity.cc  xsim_vector_sanity.cc
Composer-Software/: .gitignore  CMakeLists.txt  README.md
Composer-Software/cmake/: Config.cmake.in
Composer-Software/include/composer/: alloc.h  fpga_handle.h  rocc_response.h
Composer-Software/src/: alloc.cc  fpga_handle.cc  response_handle.cc  rocc_cmd.cc  rocc_response.cc  util.cc  verilator_server.cc
doc/: c_config.md  c_core.md  c_hardware.md  c_memory.md  c_readers.md  c_scratchpad.md  c_software.md  c_writers.md  index.md
include/composer/composer/: allocator_ptr.h  composer_consts.h  response_handle.h  rocc_cmd.h  util.h  verilator_server.h
install/: install_toolchains_f1.sh  install_toolchains_m5.sh  install_verilator.sh  setup.sh
install/fpnew_wrapper_deps/: apple_install.sh  source_install.sh  ubuntu_install.sh
lib/: libcomposer.dylib
lib/cmake/composer/: composerConfig.cmake  composerTargets-release.cmake  composerTargets.cmake
src/main/scala/energyCalc/: calculateTotalEnergy.scala
src/main/scala/java/: ForcefieldEnergy.java
src/test/scala/energyCalc/: calculateTotalEnergy.scala  calculateTotalEnergy.scala.scala  sha3tb.cc
